--- a/.github/workflows/check-target-pr.yaml
+++ b/.github/workflows/check-target-pr.yaml
@@ -10,8 +10,8 @@ jobs:
     steps:
       - name: Check if PR is from a release branch and targets main
         if: |
-          startsWith(github.head_ref, 'release/') &&
-          github.base_ref != 'main'
+          !(startsWith(github.head_ref, 'release/')) &&
+          github.base_ref == 'main'
         run: |
-          echo "This PR is from a release branch but does not target the main branch."
+          echo "PR to main must be coming from a release branch."
           exit 1
